<resources>
    <string name="app_name">Shamooseh</string>
    <string name="shared_pref">my_share_pref_weather</string>
    <!--    shared_pref-->
    <string name="lat">lat</string>
    <!--    shared_pref-->
    <string name="location">location</string>
    <!--    shared_pref-->
    <string name="lon">lon</string>
    <!--    shared_pref-->
    <string name="timeZone">timeZone</string>
    <!--    shared_pref-->
    <string name="unitsSetting">units</string>
    <!--    shared_pref-->
    <string name="languageSetting">language</string>
    <!--    shared_pref-->
    <string name="isMap">isMap</string>
    <!--    shared_pref-->
    <string name="isFavourite">isFavourite</string>
    <string name="channel_name">channel_name_toba</string>
    <string name="channel_description">channel_description_toba</string>


    <string name="weather_details">Weather Details</string>
    <string name="air_pressure">Air Pressure</string>
    <string name="clouds">Clouds</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="uv">UV</string>
    <string name="humidity">Humidity</string>
    <string name="apparent_temp">Apparent Temp</string>
    <string name="map">Map</string>
    <string name="gps">GPS</string>
    <string name="location_text">Location</string>
    <string name="initial_setting">First Time Settings</string>
    <string name="btn_ok">OK</string>
    <string name="settings">Settings</string>
    <string name="favourites">Favourites</string>
    <string name="alarm">Alarm</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="c_with_wind_speed_m_sec">C° with wind speed m/sec</string>
    <string name="f_with_wind_speed_mile_hr">F° with wind speed mile/hr</string>
    <string name="k_with_wind_speed_m_sec">K° with wind speed m/sec</string>
    <string name="save">Save</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="map_dialog_title">Do you want to change your location on map ?</string>
    <string name="units">Units</string>
    <string name="locationSetting">Location</string>
    <string name="btn_Done">Done</string>
    <string name="empty_List">Empty List</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="time">Time</string>
    <string name="alarms">Alarm</string>
    <string name="no_alerts_yet">No Alarms</string>
    <string name="overlay_title">We Need Your Permission</string>
    <string name="overlay_message">Need Your Permission to start alarms</string>
    <string name="overlay_postive_button">OK</string>
    <string name="overlay_negative_button">Cancel</string>
    <string name="set_time">Set Time</string>
    <string name="time_picker">Time Picker</string>
    <string name="date_picker">Date Picker</string>
    <string name="shamooseh">Shamooseh</string>

</resources>